--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -615,56 +615,58 @@
     <string name="not_answered">Not answered</string>
     <string name="teleconsultation_button_visitsummary">Teleconsultation</string>
     <string name="help_cardview_visit">If you get much sicker please call your nearest doctor - 73054154312</string>
-   <!-- <string name="select_language">Select Language</string>
-    <string name="address_of_isolation_line_2">Address of isolation, Line 2</string>
-    <string name="HomeScreen_Header_Title">Welcome</string>
-    <string name="if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394">If you get much sicker please call your nearest doctor: 020-26127394</string>
-    <string name="visit_Summary_cardview">Summary</string>
-    <string name="address_of_isolation_line_1">Address of isolation, Line 1*</string>
-    <string name="skip">skip</string>
-    <string name="start">Start</string>
-    <string name="error_while_fetching_location">Error while fetching locations</string>
-    <string name="something_went_wrong">Something went wrong, please try again</string>
-    <string name="password_should_be_8_characters_long_and_should_have_both_upper_and_lower_case_characters_at_least_one_digit">Password should be 8 characters long and should have both upper and lower case characters, at least one digit</string>
-    <string name="phone_number_validation">Phone number must be 10 digits</string>
-    <string name="please_select_country">Please select country</string>
-    <string name="please_select_location">Please select Location</string>
-    <string name="please_select_districts">Please select District/Municipal Corporations</string>
-    <string name="invalid_password">Invalid Password</string>
-    <string name="username_should_be_6_digits">Username should be 6 digits</string>
-    <string name="confirm_password">Confirm Password</string>
-    <string name="confirm_password_is_mismatched">Confirm password is not matched with Password</string>
-    <string name="invalid_phone_number">Invalid Phone Number</string>
-    <string name="postal_code_validation">Enter valid Postal Code</string>
-    <string name="how_are_you_today">How are you today?</string>
-    <string name="error_while_gen_mrs_id">Error while generating ID</string>
-    <string name="user_register_successfully">User Registered Successfully</string>
-    <string name="new_update_available">New Update Available</string>
-    <string name="update_app_note">New version is available with new features please update app</string>
-    <string name="update">Update</string>
-    <string name="password_validation">Password must have atleast one digit character</string>
-    <string name="password_validation_two">Password must have atleast one lowercase character</string>
-    <string name="thank_you">Thank you</string>
-    <string name="your_checkin_is_uploaded_successfully">Your check-in is uploaded successfully</string>
-    <string name="upper_case_validation">Password must have atleast one uppercase character</string>
-    <string name="password_must_eight">Password must have 8 character</string>
-    <string name="check_in">Check In</string>
-    <string name="logout_dialog">Are you sure you want to Logout?</string>
-    <string name="day_1">Day 1</string>
-    <string name="enter_check_in">Enter Check-in</string>
-    <string name="home_quarantine_guidelines">Home quarantine guidelines</string>
-    <string name="education_videos">Education videos</string>
-    <string name="help">Help</string>
-    <string name="your_check_in_overview">Your check in overview :</string>
-    <string name="do_i_have_covid_19">Do I have Covid-19?</string>
-    <string name="the_novel_coronavirus_disease_or_covid_19_is_an_infectious_disease_that_is_spreading_globally_you_may_have_the_disease_if_you_have_recently_traveled_abroad_or_came_in_contact_with_someone_who_is_known_to_be_infected_with_the_disease_in_such_cases_it_is_recommended_that_you_get_tested_and_also_self_quarantine_for_14_days">The novel Coronavirus disease or CoVid-19 is an infectious disease that is spreading globally. You may have the disease if you have recently traveled abroad, or came in contact with someone who is known to be infected with the disease. In such cases it is recommended that you get tested and also self-quarantine for 14 days.</string>
-    <string name="_14_day_quarantine_and_care">14-day quarantine and care</string>
-    <string name="home_quarantine_for_14_days_is_implemented_to_monitor_your_health_for_any_symptoms_and_to_prevent_from_spreading_the_infection_to_others_in_your_vicinity">Home-quarantine for 14 days is implemented to monitor your health for any symptoms and to prevent from spreading the infection to others in your vicinity.</string>
-    <string name="who_is_this_app_for">Who is this app for?</string>
-    <string name="this_app_is_to_help_you_through_your_14_day_quarantine_as_you_record_your_health_condition_daily_on_this_app_you_can_monitor_your_symptoms_and_understand_when_where_and_how_to_seek_medical_attention_if_they_get_worse">This app is to help you through your 14-day quarantine. As you record your health condition daily on this App, you can monitor your symptoms and understand when, where and how to seek medical attention if they get worse.</string>
-    <string name="district_municipal_corporations">District/Municipal Corporations *</string>
-    <string name="location">Location *</string>
-    <string name="prajwal_waingankar">Prajwal Waingankar</string>
-    <string name="recyclerview_home_date">01 January 2020, 12:00 AM</string>-->
+    <string name="intelesafe">InteleSafe</string>
+    <string name="who_is_this_napplication_for">Who is this  application for?</string>
+    <!-- <string name="select_language">Select Language</string>
+     <string name="address_of_isolation_line_2">Address of isolation, Line 2</string>
+     <string name="HomeScreen_Header_Title">Welcome</string>
+     <string name="if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394">If you get much sicker please call your nearest doctor: 020-26127394</string>
+     <string name="visit_Summary_cardview">Summary</string>
+     <string name="address_of_isolation_line_1">Address of isolation, Line 1*</string>
+     <string name="skip">skip</string>
+     <string name="start">Start</string>
+     <string name="error_while_fetching_location">Error while fetching locations</string>
+     <string name="something_went_wrong">Something went wrong, please try again</string>
+     <string name="password_should_be_8_characters_long_and_should_have_both_upper_and_lower_case_characters_at_least_one_digit">Password should be 8 characters long and should have both upper and lower case characters, at least one digit</string>
+     <string name="phone_number_validation">Phone number must be 10 digits</string>
+     <string name="please_select_country">Please select country</string>
+     <string name="please_select_location">Please select Location</string>
+     <string name="please_select_districts">Please select District/Municipal Corporations</string>
+     <string name="invalid_password">Invalid Password</string>
+     <string name="username_should_be_6_digits">Username should be 6 digits</string>
+     <string name="confirm_password">Confirm Password</string>
+     <string name="confirm_password_is_mismatched">Confirm password is not matched with Password</string>
+     <string name="invalid_phone_number">Invalid Phone Number</string>
+     <string name="postal_code_validation">Enter valid Postal Code</string>
+     <string name="how_are_you_today">How are you today?</string>
+     <string name="error_while_gen_mrs_id">Error while generating ID</string>
+     <string name="user_register_successfully">User Registered Successfully</string>
+     <string name="new_update_available">New Update Available</string>
+     <string name="update_app_note">New version is available with new features please update app</string>
+     <string name="update">Update</string>
+     <string name="password_validation">Password must have atleast one digit character</string>
+     <string name="password_validation_two">Password must have atleast one lowercase character</string>
+     <string name="thank_you">Thank you</string>
+     <string name="your_checkin_is_uploaded_successfully">Your check-in is uploaded successfully</string>
+     <string name="upper_case_validation">Password must have atleast one uppercase character</string>
+     <string name="password_must_eight">Password must have 8 character</string>
+     <string name="check_in">Check In</string>
+     <string name="logout_dialog">Are you sure you want to Logout?</string>
+     <string name="day_1">Day 1</string>
+     <string name="enter_check_in">Enter Check-in</string>
+     <string name="home_quarantine_guidelines">Home quarantine guidelines</string>
+     <string name="education_videos">Education videos</string>
+     <string name="help">Help</string>
+     <string name="your_check_in_overview">Your check in overview :</string>
+     <string name="do_i_have_covid_19">Do I have Covid-19?</string>
+     <string name="the_novel_coronavirus_disease_or_covid_19_is_an_infectious_disease_that_is_spreading_globally_you_may_have_the_disease_if_you_have_recently_traveled_abroad_or_came_in_contact_with_someone_who_is_known_to_be_infected_with_the_disease_in_such_cases_it_is_recommended_that_you_get_tested_and_also_self_quarantine_for_14_days">The novel Coronavirus disease or CoVid-19 is an infectious disease that is spreading globally. You may have the disease if you have recently traveled abroad, or came in contact with someone who is known to be infected with the disease. In such cases it is recommended that you get tested and also self-quarantine for 14 days.</string>
+     <string name="_14_day_quarantine_and_care">14-day quarantine and care</string>
+     <string name="home_quarantine_for_14_days_is_implemented_to_monitor_your_health_for_any_symptoms_and_to_prevent_from_spreading_the_infection_to_others_in_your_vicinity">Home-quarantine for 14 days is implemented to monitor your health for any symptoms and to prevent from spreading the infection to others in your vicinity.</string>
+     <string name="who_is_this_app_for">Who is this app for?</string>
+     <string name="this_app_is_to_help_you_through_your_14_day_quarantine_as_you_record_your_health_condition_daily_on_this_app_you_can_monitor_your_symptoms_and_understand_when_where_and_how_to_seek_medical_attention_if_they_get_worse">This app is to help you through your 14-day quarantine. As you record your health condition daily on this App, you can monitor your symptoms and understand when, where and how to seek medical attention if they get worse.</string>
+     <string name="district_municipal_corporations">District/Municipal Corporations *</string>
+     <string name="location">Location *</string>
+     <string name="prajwal_waingankar">Prajwal Waingankar</string>
+     <string name="recyclerview_home_date">01 January 2020, 12:00 AM</string>-->
 
 </resources>
