--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -603,5 +603,7 @@
     <string name="location">Location *</string>
     <string name="prajwal_waingankar">Prajwal Waingankar</string>
     <string name="recyclerview_home_date">01 January 2020, 12:00 AM</string>
+    <string name="intelesafe">InteleSafe</string>
+    <string name="who_is_this_napplication_for">Who is this \napplication for?</string>
 
 </resources>
