FAQs section is added.

--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -44,7 +44,7 @@
     <string name="day_1">Day 1</string>
     <string name="enter_check_in">Enter Check-in</string>
     <string name="home_quarantine_guidelines">Guidelines for use of PPE</string>
-    <string name="education_videos">Education videos</string>
+    <string name="education_videos">FAQs</string>
     <string name="help">Help</string>
     <string name="your_check_in_overview">Your check in overview :</string>
     <string name="do_i_have_covid_19">Do I have Covid-19?</string>
