--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -8,7 +8,7 @@
     <string name="privacy_reject_toast">आप बिना सहमति के मरीज का पंजीकरण नहीं कर सकते</string>
     <string name="address_of_isolation_line_2">Address of isolation, Line 2</string>
     <string name="HomeScreen_Header_Title">Welcome</string>
-    <string name="if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394">If you get sick or start showing symptoms of Covid-19 please get in touch with your supervisor/doctor right away. You can also message us on WhatsApp at the number below</string>
+    <string name="if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394">You can message us with your PPE related queries on our WhatsApp Helpline below.</string>
     <string name="visit_Summary_cardview">Summary</string>
     <string name="address_of_isolation_line_1">Address of isolation, Line 1*</string>
     <string name="skip">skip</string>
