--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -617,6 +617,7 @@
     <string name="help_cardview_visit">If you get much sicker please call your nearest doctor - 73054154312</string>
     <string name="intelesafe">InteleSafe</string>
     <string name="who_is_this_napplication_for">Who is this  application for?</string>
+    <string name="submit_visitSummary_Button">Submit</string>
     <!-- <string name="select_language">Select Language</string>
      <string name="address_of_isolation_line_2">Address of isolation, Line 2</string>
      <string name="HomeScreen_Header_Title">Welcome</string>
