--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -12,4 +12,5 @@
     <string name="location">Location *</string>
     <string name="prajwal_waingankar">Prajwal Waingankar</string>
     <string name="recyclerview_home_date">01 January 2020, 12:00 AM</string>
+    <string name="submit_visitSummary_Button">Submit</string>
 </resources>
