--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -16,4 +16,5 @@
     <string name="medical_registration_number_license_id">*Medical registration number/license ID</string>
     <string name="name_of_health_organization_hospital_where_you_primarily_work">*Name of health organization/hospital where you primarily work</string>
     <string name="username_10digits">Username should be 10 digits</string>
+    <string name="please_select_state">Please select state</string>
 </resources>
