--- a/app/src/main/res/values-mr-rIN/strings.xml
+++ b/app/src/main/res/values-mr-rIN/strings.xml
@@ -6,16 +6,16 @@
     <string name="reject">नाकार</string>
     <string name="next">पुढे</string>
     <string name="privacy_reject_toast">आपण संमतीशिवाय रुग्णाची नोंदणी करू शकत नाही</string>
-    <string name="address_of_isolation_line_2">Address of isolation, Line 2</string>
+    <string name="address_of_isolation_line_2">Address of isolation Line 2</string>
     <string name="HomeScreen_Header_Title">Welcome</string>
     <string name="if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394">You can message us with your PPE related queries on our WhatsApp Helpline below.</string>
     <string name="visit_Summary_cardview">Summary</string>
-    <string name="address_of_isolation_line_1">Address of isolation, Line 1*</string>
+    <string name="address_of_isolation_line_1">Address of isolation Line 1</string>
     <string name="skip">skip</string>
     <string name="start">Start</string>
     <string name="error_while_fetching_location">Error while fetching locations</string>
     <string name="something_went_wrong">Something went wrong, please try again</string>
-    <string name="password_should_be_8_characters_long_and_should_have_both_upper_and_lower_case_characters_at_least_one_digit">Password should be 8 characters long and should have both upper and lower case characters, at least one digit</string>
+    <string name="password_should_be_8_characters_long_and_should_have_both_upper_and_lower_case_characters_at_least_one_digit">Password should be 8 characters long and should have both upper and lower case characters, at least one digit.</string>
     <string name="phone_number_validation">Phone number must be 10 digits</string>
     <string name="please_select_country">Please select country</string>
     <string name="please_select_location">Please select Location</string>
@@ -53,8 +53,8 @@
     <string name="home_quarantine_for_14_days_is_implemented_to_monitor_your_health_for_any_symptoms_and_to_prevent_from_spreading_the_infection_to_others_in_your_vicinity">Home-quarantine for 14 days is implemented to monitor your health for any symptoms and to prevent from spreading the infection to others in your vicinity.</string>
     <string name="who_is_this_app_for">Who is this app for?</string>
     <string name="this_app_is_to_help_you_through_your_14_day_quarantine_as_you_record_your_health_condition_daily_on_this_app_you_can_monitor_your_symptoms_and_understand_when_where_and_how_to_seek_medical_attention_if_they_get_worse">This app is to help you through your 14-day quarantine. As you record your health condition daily on this App, you can monitor your symptoms and understand when, where and how to seek medical attention if they get worse.</string>
-    <string name="district_municipal_corporations">District/Municipal Corporations *</string>
-    <string name="location">Location *</string>
+    <string name="district_municipal_corporations">District/Municipal Corporations</string>
+    <string name="location">Location</string>
     <string name="prajwal_waingankar">Prajwal Waingankar</string>
     <string name="recyclerview_home_date">01 January 2020, 12:00 AM</string>
 
@@ -138,25 +138,25 @@
 
     //Identification Screen
     <string name="title_activity_identification" translatable="false">Add New Patient</string>
-    <string name="identification_screen_prompt_first_name">First name *</string>
-    <string name="identification_screen_prompt_middle_name">Middle name *</string>
-    <string name="identification_screen_prompt_last_name">Last name *</string>
+    <string name="identification_screen_prompt_first_name">First name</string>
+    <string name="identification_screen_prompt_middle_name">Middle name</string>
+    <string name="identification_screen_prompt_last_name">Last name</string>
     <string name="identification_screen_prompt_address">Address line 1</string>
     <string name="identification_screen_prompt_address2">Address line 2</string>
-    <string name="identification_screen_prompt_phone_number">Phone number*</string>
+    <string name="identification_screen_prompt_phone_number">Mobile Number</string>
     <string name="admin_password_dialog_heading" translatable="false">Enter Admin Password</string>
-    <string name="identification_screen_prompt_gender" translatable="false">Gender *</string>
+    <string name="identification_screen_prompt_gender" translatable="false">Gender</string>
     <string name="identification_screen_checkbox_male">Male</string>
     <string name="identification_screen_checkbox_female">Female</string>
-    <string name="identification_screen_prompt_birthday">Date of birth*</string>
+    <string name="identification_screen_prompt_birthday">Date of Birth</string>
     <string name="identification_screen_prompt_age">Age:</string>
-    <string name="identification_screen_prompt_city">Village/Town/City *</string>
-    <string name="identification_screen_prompt_state">State *</string>
+    <string name="identification_screen_prompt_city">Village/Town/City</string>
+    <string name="identification_screen_prompt_state">State</string>
     <string name="identification_screen_prompt_caste" translatable="false">Caste</string>
     <string name="identification_screen_prompt_economic_status" translatable="false">Economic status</string>
     <string name="identification_screen_prompt_education" translatable="false">Education level</string>
-    <string name="identification_screen_prompt_country" translatable="false">Country *</string>
-    <string name="identification_screen_prompt_postal_code" translatable="false">Postal code *</string>
+    <string name="identification_screen_prompt_country" translatable="false">Country</string>
+    <string name="identification_screen_prompt_postal_code" translatable="false">Postal code</string>
     <string name="identification_screen_prompt_relationship" translatable="false">Son/Daughter/Wife of</string>
     <string name="identification_screen_prompt_occupation" translatable="false">Occupation</string>
     <string name="identification_screen_snack_patient_created" translatable="false">Patient created! Uploading to server.</string>
