--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -8,8 +8,8 @@
     <string name="home_quarantine_for_14_days_is_implemented_to_monitor_your_health_for_any_symptoms_and_to_prevent_from_spreading_the_infection_to_others_in_your_vicinity">Home-quarantine for 14 days is implemented to monitor your health for any symptoms and to prevent from spreading the infection to others in your vicinity.</string>
     <string name="who_is_this_app_for">Who is this app for?</string>
     <string name="this_app_is_to_help_you_through_your_14_day_quarantine_as_you_record_your_health_condition_daily_on_this_app_you_can_monitor_your_symptoms_and_understand_when_where_and_how_to_seek_medical_attention_if_they_get_worse">This app is to help you through your 14-day quarantine. As you record your health condition daily on this App, you can monitor your symptoms and understand when, where and how to seek medical attention if they get worse.</string>
-    <string name="district_municipal_corporations">District/Municipal Corporations *</string>
-    <string name="location">Location *</string>
+    <string name="district_municipal_corporations">District/Municipal Corporations</string>
+    <string name="location">Location</string>
     <string name="prajwal_waingankar">Prajwal Waingankar</string>
     <string name="recyclerview_home_date">01 January 2020, 12:00 AM</string>
     <string name="submit_visitSummary_Button">Submit</string>
