--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -611,4 +611,13 @@
     <string name="username_10digits">Username should be 10 digits</string>
     <string name="please_select_state">Please select state</string>
 
+    //HomeScreen (New Changes)
+    <string name="txt_self_assessment">Self Assessment</string>
+    <string name="txt_start_now">Start Now</string>
+    <string name="personal_pr">Personal protection guidelines</string>
+
+    <string name="if_you_star">If you start showing symptoms of Covid-19 please reach out to your supervisor/doctor. You can also send us a WhatsApp message at the number below for any concerns.</string>
+    <string name="some_id">020-26127394</string>
+
+
 </resources>
