--- a/app/src/main/res/values-mr-rIN/strings.xml
+++ b/app/src/main/res/values-mr-rIN/strings.xml
@@ -674,5 +674,21 @@
      <string name="location">Location *</string>
      <string name="prajwal_waingankar">Prajwal Waingankar</string>
      <string name="recyclerview_home_date">01 January 2020, 12:00 AM</string>
+
  -->
+
+
+    //HomeScreen (New Changes)
+    <string name="txt_self_assessment">Self Assessment</string>
+    <string name="txt_start_now">Start Now</string>
+    <string name="personal_pr">Personal protection guidelines</string>
+    <string name="if_you_star">If you start showing symptoms of Covid-19 please reach out to your supervisor/doctor. You can also send us a WhatsApp message at the number below for any concerns.</string>
+    <string name="some_id">020-26127394</string>
+
+    // SignUP Screen(New Changes)
+    <string name="txt_personal_caste_header">I am a...</string>
+    <string name="txt_prompt_caste">Select Caste</string>
+    <string name="txt_enter_caste">Designation</string>
+    <string name="toast_select_designation">Please select your designation.</string>
+    <string name="error_empty_designation">Enter your designation.</string>
 </resources>
