--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -681,7 +681,7 @@
     <string name="txt_start_now">Start Now</string>
     <string name="personal_pr">Personal protection guidelines</string>
     <string name="if_you_star">If you start showing symptoms of Covid-19 please reach out to your supervisor/doctor. You can also send us a WhatsApp message at the number below for any concerns.</string>
-    <string name="some_id">020-26127394</string>
+    <string name="some_id">+91 9825989750</string>
 
     // SignUP Screen(New Changes)
     <string name="txt_personal_caste_header">I am a...</string>
