--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
 
 
     <string name="cant_login_user" translatable="false">Can\'t log in?</string>
-    <string name="email_link" translatable="false">Please contact your System Administrator to reset your password or send an email to support@intelehealth.io</string>
+    <string name="email_link" translatable="false"> To reset your password send an email to support@intelehealth.io</string>
 
     // Sign up
     <string name="title_sign_up" translatable="false">Sign Up</string>
