--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -6,7 +6,7 @@
     <string name="reject">अस्वीकार</string>
     <string name="next">आगे</string>
     <string name="privacy_reject_toast">आप बिना सहमति के मरीज का पंजीकरण नहीं कर सकते</string>
-    <string name="address_of_line_2">Address of Line 2*</string>
+    <string name="address_of_line_2">Address of Line 2</string>
     <string name="HomeScreen_Header_Title">Welcome</string>
     <string name="if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394">You can message us with your PPE related queries on our WhatsApp Helpline below by clicking on it.</string>
     <string name="visit_Summary_cardview">Summary</string>
