--- a/app/src/main/res/values-mr-rIN/strings.xml
+++ b/app/src/main/res/values-mr-rIN/strings.xml
@@ -41,7 +41,7 @@
     <string name="password_must_eight">Password must have 8 character</string>
     <string name="check_in">Check In</string>
     <string name="logout_dialog">Are you sure you want to Logout?</string>
-    <string name="day_1">Day 1</string>
+    <string name="day_1">Day 1 | Tue 9</string>
     <string name="enter_check_in">Enter Check-in</string>
     <string name="home_quarantine_guidelines">Guidelines for use of PPE</string>
     <string name="education_videos">FAQs</string>
