--- a/app/src/main/res/values-hi-rIN/strings.xml
+++ b/app/src/main/res/values-hi-rIN/strings.xml
@@ -1,65 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">InteleSafe</string>
-    <string name="select_language">Select Language</string>
-    <string name="accept">स्वीकार</string>
-    <string name="reject">अस्वीकार</string>
-    <string name="next">आगे</string>
-    <string name="privacy_reject_toast">आप बिना सहमति के मरीज का पंजीकरण नहीं कर सकते</string>
-    <string name="address_of_line_2">Address of Line 2</string>
-    <string name="HomeScreen_Header_Title">Welcome</string>
-    <string name="if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394">You can message us with your PPE related queries on our WhatsApp Helpline below by clicking on it.</string>
-    <string name="visit_Summary_cardview">Summary</string>
-    <string name="address_of_line_1">Address of Line 1*</string>
-    <string name="skip">skip</string>
-    <string name="start">Start</string>
-    <string name="error_while_fetching_location">Error while fetching locations</string>
-    <string name="something_went_wrong">Something went wrong, please try again</string>
-    <string name="password_should_be_8_characters_long_and_should_have_both_upper_and_lower_case_characters_at_least_one_digit">Password should be 8 characters long and should have both upper and lower case characters, at least one digit.</string>
-    <string name="phone_number_validation">Phone number must be 10 digits</string>
-    <string name="please_select_country">Please select country</string>
-    <string name="please_select_location">Please select Location</string>
-    <string name="please_select_districts">Please select District/Municipal Corporations</string>
-    <string name="invalid_password">Invalid Password</string>
-    <string name="username_should_be_6_digits">Username should be 6 digits</string>
-    <string name="confirm_password">Confirm Password*</string>
-    <string name="confirm_password_is_mismatched">Confirm password is not matched with Password</string>
-    <string name="invalid_phone_number">Invalid Phone Number</string>
-    <string name="postal_code_validation">Enter valid Postal Code</string>
-    <string name="how_are_you_today">How are you today?</string>
-    <string name="error_while_gen_mrs_id">Error while generating ID</string>
-    <string name="user_register_successfully">User Registered Successfully</string>
-    <string name="new_update_available">New Update Available</string>
-    <string name="update_app_note">New version is available with new features please update app</string>
-    <string name="update">Update</string>
-    <string name="password_validation_two">Password must have atleast one lowercase character</string>
-
-    <string name="password_validation">Password must have atleast one digit character</string>
-    <string name="thank_you">Thank you</string>
-    <string name="your_checkin_is_uploaded_successfully">Your check-in submitted successfully.</string>
-    <string name="upper_case_validation">Password must have atleast one uppercase character</string>
-    <string name="password_must_eight">Password must have 8 character</string>
-    <string name="check_in">Check In</string>
-    <string name="logout_dialog">Are you sure you want to Logout?</string>
-    <string name="day_1">Day 1</string>
-    <string name="enter_check_in">Enter Check-in</string>
-    <string name="home_quarantine_guidelines">Guidelines for use of PPE</string>
-    <string name="education_videos">FAQs</string>
-    <string name="help">Help</string>
-    <string name="your_check_in_overview">Your check in overview :</string>
-    <string name="do_i_have_covid_19">Do I have Covid-19?</string>
-    <string name="the_novel_coronavirus_disease_or_covid_19_is_an_infectious_disease_that_is_spreading_globally_you_may_have_the_disease_if_you_have_recently_traveled_abroad_or_came_in_contact_with_someone_who_is_known_to_be_infected_with_the_disease_in_such_cases_it_is_recommended_that_you_get_tested_and_also_self_quarantine_for_14_days">The novel Coronavirus disease or CoVid-19 is an infectious disease that is spreading globally. You may have the disease if you have recently traveled abroad, or came in contact with someone who is known to be infected with the disease. In such cases it is recommended that you get tested and also self-quarantine for 14 days.</string>
-    <string name="_14_day_quarantine_and_care">14-day quarantine and care</string>
-    <string name="home_quarantine_for_14_days_is_implemented_to_monitor_your_health_for_any_symptoms_and_to_prevent_from_spreading_the_infection_to_others_in_your_vicinity">Home-quarantine for 14 days is implemented to monitor your health for any symptoms and to prevent from spreading the infection to others in your vicinity.</string>
-    <string name="who_is_this_app_for">Who is this app for?</string>
-    <string name="this_app_is_to_help_you_through_your_14_day_quarantine_as_you_record_your_health_condition_daily_on_this_app_you_can_monitor_your_symptoms_and_understand_when_where_and_how_to_seek_medical_attention_if_they_get_worse">This app is to help you through your 14-day quarantine. As you record your health condition daily on this App, you can monitor your symptoms and understand when, where and how to seek medical attention if they get worse.</string>
-    <string name="district_municipal_corporations">District/Municipal Corporations</string>
-    <string name="location">Location</string>
-    <string name="prajwal_waingankar">Prajwal Waingankar</string>
-    <string name="recyclerview_home_date">01 January 2020, 12:00 AM</string>
-
-
-
 
     <!--Exisiting Strings-->
 <!--    <string name="app_name" translatable="false">Intelehealth</string>-->
@@ -500,6 +441,7 @@
     <string name="title_activity_patient_survey" translatable="false">PatientSurveyActivity</string>
 
     <!--Privacy Notice Activity-->
+    <string name="privacy_agree">गोपनीयता नोटिस से सहमत हों।</string>
     <string name="privacy_toast">Please select an option</string>
     <string name="temperature_f">Temperature (F)</string>
     <string name="sync_now">Sync Now</string>
@@ -524,9 +466,9 @@
     <string name="education_level">Education level</string>
     <string name="caste">Caste</string>
     <string name="previous_visits">Previous visits</string>
-   <!-- <string name="accept">Accept</string>
-    <string name="reject">Reject</string>
-    <string name="next">Next</string>-->
+    <string name="accept">स्वीकार</string>
+    <string name="reject">अस्वीकार</string>
+    <string name="next">आगे</string>
     <string name="which_server_would_you_like_to_connect_to">Which server would you like to connect to?</string>
     <string name="enter_url">Enter URL</string>
     <string name="choose_a_location_to_login">Choose a location to login</string>
@@ -583,7 +525,7 @@
     <string name="downloading_prescription">Downloading prescription</string>
     <string name="visit_data_failed">Visit Data Failed</string>
     <string name="patient_data_failed">Patient Data Failed</string>
-    <string name="privacy_notice_title">Privacy Notice</string>
+    <string name="privacy_notice_title">गोपनीयता सूचना</string>
     <string name="no_data_active_patients">No patient records for this health worker found.</string>
     <string name="syncing_visitDialog">Syncing</string>
     <string name="successfully_synced_notif">Successfully synced</string>
@@ -611,19 +553,75 @@
 
     <string name="end_visit_msg">Are you sure you want to end the visit?</string>
     <string name="prescription_not_downloaded_check_internet">Prescription not downloaded, check internet connection</string>
-<!--    <string name="privacy_reject_toast">You cannot register a patient without consent</string>-->
+    <string name="privacy_reject_toast">आप बिना सहमति के मरीज का पंजीकरण नहीं कर सकते</string>
     <string name="not_answered">Not answered</string>
     <string name="teleconsultation_button_visitsummary">Teleconsultation</string>
     <string name="help_cardview_visit">If you get much sicker please call your nearest doctor - 73054154312</string>
+    <string name="choose_your_language">भाषा का चयन करें</string>
+    <string name="address_of_line_2">Address of Line 2</string>
+    <string name="HomeScreen_Header_Title">Welcome</string>
+    <string name="if_you_get_much_sicker_please_call_your_nearest_doctor_020_26127394">You can message us with your PPE related queries on our WhatsApp Helpline below by clicking on it.</string>
+    <string name="visit_Summary_cardview">Summary</string>
+    <string name="address_of_line_1">Address of Line 1*</string>
+    <string name="skip">skip</string>
+    <string name="start">Start</string>
+    <string name="error_while_fetching_location">Error while fetching locations</string>
+    <string name="something_went_wrong">Something went wrong, please try again</string>
+    <string name="password_should_be_8_characters_long_and_should_have_both_upper_and_lower_case_characters_at_least_one_digit">Password should be 8 characters long and should have both upper and lower case characters, at least one digit.</string>
+    <string name="phone_number_validation">Phone number must be 10 digits</string>
+    <string name="please_select_country">Please select country</string>
+    <string name="please_select_location">Please select Location</string>
+    <string name="please_select_districts">Please select District/Municipal Corporations</string>
+    <string name="invalid_password">Invalid Password</string>
+    <string name="username_should_be_6_digits">Username should be 6 digits</string>
+    <string name="confirm_password">Confirm Password*</string>
+    <string name="confirm_password_is_mismatched">Confirm password is not matched with Password</string>
+    <string name="invalid_phone_number">Invalid Phone Number</string>
+    <string name="postal_code_validation">Enter valid Postal Code</string>
+    <string name="how_are_you_today">How are you today?</string>
+    <string name="error_while_gen_mrs_id">Error while generating ID</string>
+    <string name="user_register_successfully">User Registered Successfully</string>
+    <string name="new_update_available">New Update Available</string>
+    <string name="update_app_note">New version is available with new features please update app</string>
+    <string name="update">Update</string>
+    <string name="password_validation">Password must have atleast one digit character</string>
+    <string name="password_validation_two">Password must have atleast one lowercase character</string>
+    <string name="thank_you">Thank you</string>
+    <string name="your_checkin_is_uploaded_successfully">Your check-in submitted successfully.</string>
+    <string name="upper_case_validation">Password must have atleast one uppercase character</string>
+    <string name="password_must_eight">Password must have 8 character</string>
+    <string name="check_in">Check In</string>
+    <string name="logout_dialog">Are you sure you want to Logout?</string>
+    <string name="day_1">Day 1</string>
+    <string name="enter_check_in">Enter Check-in</string>
+    <string name="home_quarantine_guidelines">Guidelines for use of PPE</string>
+    <string name="education_videos">FAQs</string>
+    <string name="help">Help</string>
+    <string name="your_check_in_overview">Your check in overview :</string>
+    <string name="do_i_have_covid_19">Do I have Covid-19?</string>
+    <string name="the_novel_coronavirus_disease_or_covid_19_is_an_infectious_disease_that_is_spreading_globally_you_may_have_the_disease_if_you_have_recently_traveled_abroad_or_came_in_contact_with_someone_who_is_known_to_be_infected_with_the_disease_in_such_cases_it_is_recommended_that_you_get_tested_and_also_self_quarantine_for_14_days">The novel Coronavirus disease or CoVid-19 is an infectious disease that is spreading globally. You may have the disease if you have recently traveled abroad, or came in contact with someone who is known to be infected with the disease. In such cases it is recommended that you get tested and also self-quarantine for 14 days.</string>
+    <string name="_14_day_quarantine_and_care">14-day quarantine and care</string>
+    <string name="home_quarantine_for_14_days_is_implemented_to_monitor_your_health_for_any_symptoms_and_to_prevent_from_spreading_the_infection_to_others_in_your_vicinity">Home-quarantine for 14 days is implemented to monitor your health for any symptoms and to prevent from spreading the infection to others in your vicinity.</string>
+    <string name="who_is_this_app_for">Who is this app for?</string>
+    <string name="this_app_is_to_help_you_through_your_14_day_quarantine_as_you_record_your_health_condition_daily_on_this_app_you_can_monitor_your_symptoms_and_understand_when_where_and_how_to_seek_medical_attention_if_they_get_worse">This app is to help you through your 14-day quarantine. As you record your health condition daily on this App, you can monitor your symptoms and understand when, where and how to seek medical attention if they get worse.</string>
+    <string name="district_municipal_corporations">District/Municipal Corporations</string>
+    <string name="location">Location</string>
+    <string name="prajwal_waingankar">Prajwal Waingankar</string>
+    <string name="recyclerview_home_date">01 January 2020, 12:00 AM</string>
     <string name="intelesafe">InteleSafe</string>
-    <string name="who_is_this_napplication_for">Who is this  application for?</string>
+    <string name="who_is_this_napplication_for">यह आवेदन किसके लिए है?</string>
     <string name="submit_visitSummary_Button">Submit</string>
     <string name="medical_registration_number_license_id">Medical registration number/license ID</string>
     <string name="name_of_health_organization_hospital_where_you_primarily_work">Health org./hospital where you work</string>
     <string name="username_10digits">Username should be 10 digits</string>
     <string name="please_select_state">Please select state</string>
+    <string name="save">Save</string>
+    <string name="personal_information">Personal Information</string>
+    <string name="login_details">Login Details</string>
+    <string name="username">Username*</string>
+    <string name="username_condition">Your mobile number is set as your username and cannot be changed.</string>
+    <string name="address_details">Address Details</string>
     <string name="stay_aware_stay_safe">Stay Aware | Stay Safe</string>
-    <string name="assessment_visit_title">Assessment</string>
     <!-- <string name="select_language">Select Language</string>
      <string name="address_of_isolation_line_2">Address of isolation, Line 2</string>
      <string name="HomeScreen_Header_Title">Welcome</string>
@@ -682,6 +680,9 @@
     <string name="personal_pr">Personal protection guidelines</string>
     <string name="if_you_star">If you start showing symptoms of Covid-19 please reach out to your supervisor/doctor. You can also send us a WhatsApp message at the number below for any concerns.</string>
     <string name="some_id">+91 9825989750</string>
+    <string name="assessment_visit_title">Assessment</string>
+    <string name="teleconsult_request">Teleconsult request</string>
+    <string name="feeling_stressed_or_anxious_request_for_a_free_confidential_mental_health_consultation_with_a_counsellor">Feeling stressed or anxious? Request for a free confidential mental health consultation with a counsellor.</string>
 
     // SignUP Screen(New Changes)
     <string name="txt_personal_caste_header">I am a...*</string>
@@ -689,5 +690,8 @@
     <string name="txt_enter_caste">Designation</string>
     <string name="toast_select_designation">Please select your designation.</string>
     <string name="error_empty_designation">Enter your designation.</string>
+    <string name="intro_desc1">This app is for all types of health workers at the frontlines of care to learn about personal protection measures and PPE use.</string>
+    <string name="intro_desc2">You can monitor your own health daily and reach out for help if you think you may have had unsafe exposure and may be infected.</string>
+    <string name="please_fill_your_details">Please fill your details</string>
 
 </resources>
