--- a/app/src/main/res/values-mr-rIN/strings.xml
+++ b/app/src/main/res/values-mr-rIN/strings.xml
@@ -689,7 +689,13 @@
     <string name="ppe_req_sub_header">This service is currently available in Mumbai and Delhi only. We aim to serve as many as possible and hope to expand this service to other areas soon.</string>
     <string name="ppe_req">Order PPE kits</string>
     <string name="ppe_req_hint">What PPE do you require with quantity*</string>
+
     <string name="txt_whatsapp_helpline">WhatsApp Helpline</string>
+    <string name="Mental_health_support_text">Feeling stressed or anxious? Here are some self-care and support resources for healthcare providers</string>
+    <string name="tele_consultant_text">Feeling stressed or anxious? Request for a free confidential mental health consultation with a counsellor.</string>
+    <string name="mental_health_support">Mental health support</string>
+    <string name="teleconsult_request">Teleconsult request</string>
+
 
     // SignUP Screen(New Changes)
     <string name="txt_personal_caste_header">I am a...*</string>
