app id and fb id is added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -657,5 +657,5 @@
 
     //Facebook SDK - Prajwal
     <string name="facebook_app_id">org.intelehealth.intelesafe</string>
-    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
+    <string name="fb_login_protocol_scheme">307013896947807</string>
 </resources>
